@@ -1,3 +1,13 @@
+2004-04-26  David Hyatt  <hyatt@apple.com>
+
+	Implement the quirk that makes the <body> and <html> size to fill the viewport in quirks mode.  This
+	matches WinIE.
+	
+        Reviewed by john
+
+        * khtml/rendering/render_box.cpp:
+        (RenderBox::calcHeight):
+
 2004-04-26  Ken Kocienda  <kocienda@apple.com>
 
         Reviewed by John
